             - update Makefile to v0.2.2: fix bug of rebuild function
             - update Makefile to v0.2.3: fix fatal bug of custom source file
             - update Makefile to v0.2.4: fix fatal bug about build error when pass a absolute path  or relative path
           (5)rename function WDT_clear as WDT_feed
           (6)add version.h for HML version information
           (7)rename enumeration INTR_priority as UTIL_interruptPriority and move it to util.h
           (8)move stc89.h to inc/hw

>Version : v1.1.1
 Alias   :
 Date    : 2019-08-28
 Note    : (1)rename all examples
           (2)fix bugs in examples because of changes from HML interface(GPIO_configBitValue)
           (3)support new MCU model
             - STC89C53RC
             - STC89LE53RC
             - STC89C516RD+
             - STC89LE516RD+
           (4)optimize HML compile selection check and add macro HAVE_ISP

>Version : v1.1.2
 Alias   :
 Date    : 2019-10-27
 Note    : (1)add warning information output when meet redundant source files under conditional compilation
           (2)correct wrong formula for tim2 initial value
           (3)add new function
             - TIM2_getCaptureValue
             - TIM2_isExternalEvent
             - TIM2_setReloadValue
             - TIM2_BAUD_cmd
           (4)rename function TIM2_INT_T2EX_cmd as TIM2_T2EX_cmd

>Version : v1.2.0
 Alias   :
 Date    : 
 Note    : (1)add types.h including definitions of data types
           (2)fix bug that timer-2 cannot run in baud rate generator mode
           (3)update Makefile to v0.2.6
             - support <library> target, user can get usage via <make help>
             - optimize <make version> function
           (4)optimize sleep function
           (5)refactor version.h